--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.2.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
