--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.1",
     "ngx-bootstrap": "^6.2.0",
